--- a/portfolio.html
+++ b/portfolio.html
@@ -117,8 +117,8 @@
 
 <section class="hero" id="home">
   <div class="content" data-aos="fade-right">
-    <h1>Data <span>Specialist</span> & Social <span>Architect</span>.</h1>
-    <p>Ako si <strong>King Melvin Q. Regacho</strong>. Isang dalubhasa sa Reddit Management at Data Scraping na tumutulong sa mga negosyo na gawing actionable insights ang raw data.</p>
+    <h1>Social <span>Media Manager</span> & Social <span>Media Research Assistant</span>.</h1>
+    <p>I'm <strong>King Melvin Q. Regacho</strong>Dynamic social media professional with proven expertise at Weave Cloud in data collection and analysis. Adept at fostering teamwork and collaboration, I developed engaging content strategies that enhanced brand visibility. Skilled in Microsoft Office, I effectively managed projects, ensuring timely delivery and impactful results in digital marketing initiatives.</p>
     <div class="d-flex gap-4 mt-5">
       <a href="#contact" class="btn btn-info btn-lg py-3 px-5 fs-4 fw-bold rounded-pill text-dark shadow">Let's Connect</a>
     </div>
